[gd_scene load_steps=8 format=2]

[ext_resource path="res://Resources/Tiles/Isotiles.tres" type="TileSet" id=1]
[ext_resource path="res://Scenes/Tools/Camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Level.gd" type="Script" id=4]
[ext_resource path="res://Resources/UI/new_theme.tres" type="Theme" id=8]
[ext_resource path="res://Scripts/Map.gd" type="Script" id=9]

[sub_resource type="Shader" id=1]
code = "shader_type spatial;
render_mode depth_draw_always; // Remove this line if you're not on the transparency pipeline.



uniform vec4 albedo : hint_color = vec4(1.0);
uniform sampler2D texture_albedo : hint_albedo;

// Diffuse curve. This is, in my opinion, what defines a toon shader. A
// photo-realistic shader should have a linear curve starting at 0 and
// finishing at 1, and a toon shader should start at 0 and get to 1 almost
// instantaneously. The length of this transition is its smoothing, working
// the same way as the specular and rim light smoothing uniforms. Another
// common curve is to make it a staircase, which would result in multiple
// shading bands. Check the video for a more detailed explanation.
uniform sampler2D diffuse_curve : hint_white;

// Specular light uniforms. Set specular to zero to turn off the effect.
// The texture map uses the red channel for the specular value, green for amount
// and blue for smoothness.
uniform float specular : hint_range(0,1) = 0.5;
uniform float specular_amount : hint_range(0,1) = 0.5;
uniform float specular_smoothness : hint_range(0,1) = 0.05;
uniform sampler2D texture_specular : hint_white;

// Rim light uniforms. Set rim to zero to turn off the effect.
// The texture map uses the red channel for the rim value, green for rim amount
// and blue for smoothness.
uniform float rim : hint_range(0,1) = 0.5;
uniform float rim_amount : hint_range(0,1) = 0.2;
uniform float rim_smoothness : hint_range(0,1) = 0.05;
uniform sampler2D texture_rim : hint_white;

// Roughness and metallic here are only for reflection purposes if you are
// using SS reflections or want the sky reflected on your material. In most
// cases you don't want to change those, but you can try them. The surface
// texture maps the red channel to roughness and the green channel to metallic.
uniform float metallic : hint_range(0,1) = 0.0;
uniform float roughness : hint_range(0,1) = 1.0;
uniform sampler2D texture_surface : hint_white;

// Emission from base code.
uniform vec4 emission : hint_color = vec4(0.0, 0.0, 0.0, 1.0);
uniform float emission_energy = 1.0;
uniform sampler2D texture_emission : hint_black_albedo;

// Normal map from base code.
uniform float normal_scale : hint_range(-16,16) = 1.0;
uniform sampler2D texture_normal : hint_normal;

// Depth map from base code.
uniform float depth_scale = 0.0;
uniform int depth_min_layers = 8;
uniform int depth_max_layers = 32;
uniform bool flip_tangent = false;
uniform bool flip_binormal = false;
uniform sampler2D texture_depth : hint_black;

// Ambient occlusion from base code.
uniform float ao_light_affect: hint_range(0,1) = 0.0;
uniform sampler2D ao_map : hint_white;

// Anisotropy from base code.
uniform float anisotropy_ratio: hint_range(-1,1) = 0.0;
uniform vec3 anisotropy_direction = vec3(0.0, -1.0, 0.0);
uniform float aniso_map_dir_ratio: hint_range(0,1) = 0.0;
uniform sampler2D anisotropy_flowmap : hint_aniso;

// Subsurface scattering, from base code.
uniform float subsurface_scattering : hint_range(0,1) = 0.0;
uniform sampler2D texture_sss : hint_white;

// Transmission, from base code.
uniform vec4 transmission : hint_color = vec4(0.0, 0.0, 0.0, 1.0);
uniform sampler2D texture_transmission : hint_black;

// Refraction from base code.
uniform float refraction : hint_range(-16,16) = 0.00;
const vec4 refraction_texture_channel = vec4(1.0, 0.0, 0.0, 0.0); // Refraction channel is set to red.
uniform sampler2D texture_refraction;

// UV scale and offset from base code.
uniform vec2 uv_scale = vec2(1,1);
uniform vec2 uv_offset = vec2(0,0);



// Vertex function to deal with UV scale and offset, straight out of base code.
void vertex() {
	UV = UV * uv_scale.xy + uv_offset.xy;
}



void fragment() {
	vec2 base_uv = UV;
	
	// Depth from base code, with deep parallax enabled. Slightly modified so that
	// black are deeps and white are peaks, as well as turning depth flip into bools.
	// It is very intense on the GPU, so keep depth scale at zero to turn this off.
	if (depth_scale != 0.0) {
		vec2 depth_flip = vec2(flip_tangent ? -1.0 : 1.0, flip_binormal ? -1.0 : 1.0);
		vec3 view_dir = normalize(normalize(-VERTEX)*mat3(TANGENT*depth_flip.x,-BINORMAL*depth_flip.y,NORMAL));
		float num_layers = mix(float(depth_max_layers),float(depth_min_layers), abs(dot(vec3(0.0, 0.0, 1.0), view_dir)));
		float layer_depth = 1.0 / num_layers;
		float current_layer_depth = 0.0;
		vec2 P = view_dir.xy * depth_scale;
		vec2 delta = P / num_layers;
		vec2  ofs = base_uv;
		float depth = 1.0 - textureLod(texture_depth, ofs,0.0).r;
		float current_depth = 0.0;
		while(current_depth < depth) {
			ofs -= delta;
			depth = 1.0 - textureLod(texture_depth, ofs,0.0).r;
			current_depth += layer_depth;
		}
		vec2 prev_ofs = ofs + delta;
		float after_depth  = depth - current_depth;
		float before_depth = 1.0 - textureLod(texture_depth, prev_ofs, 0.0).r - current_depth + layer_depth;
		float weight = after_depth / (after_depth - before_depth);
		ofs = mix(ofs,prev_ofs,weight);
		base_uv=ofs;
	}
	
	ROUGHNESS = roughness * texture(texture_surface, base_uv).r;
	METALLIC = metallic * texture(texture_surface, base_uv).g;
	
	// Normal map, straight out of base code.
	NORMALMAP = texture(texture_normal, base_uv).rgb;
	NORMALMAP_DEPTH = normal_scale;
	
	// Ambient occlusion, straight out of base code on the red channel.
	AO = texture(ao_map, base_uv).r;
	AO_LIGHT_AFFECT = ao_light_affect;
	
	// Emission, straight out of base code with additive mode.
	EMISSION = (emission.rgb + texture(texture_emission, base_uv).rgb) * emission_energy;
	
	// Subsurface scattering, straight out of base code. I put it on the transparency
	// shader because it is a transparency effect, but it actually doesn't work if the
	// object is on the transparent pipeline. If you want to use that effect, comment
	// out the refraction code and leave the alpha value commented out as well.
	SSS_STRENGTH = subsurface_scattering * texture(texture_sss, base_uv).r;

	// Transmission, straight out of base code. It works best when on the
	// transparent pipeline or with shadows disabled, just make sure it is
	// not showing its own shadow on its back.
	TRANSMISSION = transmission.rgb + texture(texture_transmission, base_uv).rgb;
	
	// Refraction, slightly modified. It doesn't actually uses the alpha value, instead
	// it reads from the screen texture in order to distort the image to make refraction.
	// This means nothing else that reads from it will appear through it, and things on the
	// alpha channel also have troubles showing behind them. If you want to disable refraction
	// and just use the alpha channel, just take out all of the following uncommented lines
	// and uncomment the commented ones.
	vec3 normal = normalize(mix(NORMAL,TANGENT*NORMALMAP.x + BINORMAL*NORMALMAP.y + NORMAL*NORMALMAP.z,NORMALMAP_DEPTH));
	vec2 ref_ofs = SCREEN_UV - normal.xy * dot(texture(texture_refraction, base_uv), refraction_texture_channel) * refraction;
	float ref_amount = 1.0 - albedo.a * texture(texture_albedo, UV).a;
	EMISSION += textureLod(SCREEN_TEXTURE, ref_ofs, 0.0).rgb * ref_amount;
	ALBEDO = (1.0 - ref_amount) * albedo.rgb * texture(texture_albedo, UV).rgb;
	ALPHA = 1.0;
//	ALBEDO = albedo.rgb * texture(texture_albedo, UV).rgb;
//	ALPHA = albedo.a * texture(texture_albedo, UV).a;
}



const float PI = 3.14159265358979323846;

void light() {
	// Let's start by incorporating specular and rim textures. Pay attention to
	// the channels and what each value does.
	float spec_value = specular * texture(texture_specular, UV).r;
	float spec_gloss = pow(2.0, 8.0 * (1.0 - specular_amount * texture(texture_specular, UV).g));
	float spec_smooth = specular_smoothness * texture(texture_specular, UV).b;
	float rim_value = rim * texture(texture_rim, UV).r;
	float rim_width = rim_amount * texture(texture_rim, UV).g;
	float rim_smooth = rim_smoothness * texture(texture_rim, UV).b;
	
	// Diffuse part. We take the dot product between light and normal, multiply it by attenuation
	// and apply it to the diffuse curve. This means the diffuse curve gets to do the dot product
	// smoothing, set multiple light bands each with its own tone and smoothing, etc etc. I reccomend
	// using the gradient tool to make a curve, since it gives you control of each point's position
	// and color with precision. The curve tool works too, it gives you control of different
	// interpolation methods but you have less control over each point's exact position and value.
	vec3 litness = texture(diffuse_curve, vec2(dot(LIGHT, NORMAL), 0.0)).r * ATTENUATION;
	DIFFUSE_LIGHT += ALBEDO * LIGHT_COLOR * (litness + TRANSMISSION * (ATTENUATION - litness));
	
	// Specular part. We use the Blinn-Phong specular calculations with a smoothstep
	// function to toonify. Mess with the specular uniforms to see what each one does.
	// It also deals with anisotropy. If you want to remove anisotropy calculations,
	// remove flowchart, aniso_dir, aniso and replace spec by dot(NORMAL, half).
	vec3 half = normalize(VIEW + LIGHT);
	vec3 flowchart = (texture(anisotropy_flowmap, UV).rgb * 2.0 - 1.0);
	vec3 aniso_dir = mix(normalize(anisotropy_direction), flowchart, aniso_map_dir_ratio);
	float aniso = max(0, sin(dot(normalize(NORMAL + aniso_dir), half) * PI));
	float spec = mix(dot(NORMAL, half), aniso, anisotropy_ratio * texture(anisotropy_flowmap, UV).a);
	float spec_intensity = pow(spec, spec_gloss * spec_gloss);
	spec_intensity = smoothstep(0.05, 0.05 + spec_smooth, spec_intensity);
	SPECULAR_LIGHT += LIGHT_COLOR * spec_value * spec_intensity * litness;
	
	// Rim part. We use the view and normal vectors only to find out if we're looking
	// at a pixel from the edge of the object or not. We add the final value to specular
	// light values so that Godot treats it as specular.
	float rim_dot = 1.0 - dot(NORMAL, VIEW);
	float rim_threshold = pow((1.0 - rim_width), dot(LIGHT, NORMAL));
	float rim_intensity = smoothstep(rim_threshold - rim_smooth/2.0, rim_threshold + rim_smooth/2.0, rim_dot);
	SPECULAR_LIGHT += LIGHT_COLOR * rim_value * rim_intensity * litness;
}


"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/albedo = Color( 1, 1, 1, 1 )
shader_param/specular = 0.5
shader_param/specular_amount = 0.5
shader_param/specular_smoothness = 0.05
shader_param/rim = 0.5
shader_param/rim_amount = 0.2
shader_param/rim_smoothness = 0.05
shader_param/metallic = 0.0
shader_param/roughness = 1.0
shader_param/emission = Color( 0, 0, 0, 1 )
shader_param/emission_energy = 1.0
shader_param/normal_scale = 1.0
shader_param/depth_scale = 0.0
shader_param/depth_min_layers = 8
shader_param/depth_max_layers = 32
shader_param/flip_tangent = false
shader_param/flip_binormal = false
shader_param/ao_light_affect = 0.0
shader_param/anisotropy_ratio = 0.0
shader_param/anisotropy_direction = Vector3( 0, -1, 0 )
shader_param/aniso_map_dir_ratio = 0.0
shader_param/subsurface_scattering = 0.0
shader_param/transmission = Color( 0, 0, 0, 1 )
shader_param/refraction = 0.0
shader_param/uv_scale = Vector2( 1, 1 )
shader_param/uv_offset = Vector2( 0, 0 )

[node name="Level" type="Node2D"]
material = SubResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Map" type="Node2D" parent="."]
script = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}
load_external_level = true

[node name="9" type="TileMap" parent="Map"]
visible = false
position = Vector2( 0, -154 )
z_index = 9
z_as_relative = false
mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 64, 32 )
cell_y_sort = true
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="8" type="TileMap" parent="Map"]
position = Vector2( 0, -154 )
z_index = 8
z_as_relative = false
mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 64, 32 )
cell_y_sort = true
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="7" type="TileMap" parent="Map"]
position = Vector2( 0, -137 )
z_index = 7
z_as_relative = false
mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 64, 32 )
cell_y_sort = true
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="6" type="TileMap" parent="Map"]
position = Vector2( 0, -120 )
z_index = 6
z_as_relative = false
mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 64, 32 )
cell_y_sort = true
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="5" type="TileMap" parent="Map"]
position = Vector2( 0, -103 )
z_index = 5
z_as_relative = false
mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 64, 32 )
cell_y_sort = true
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="4" type="TileMap" parent="Map"]
position = Vector2( 0, -86 )
z_index = 4
z_as_relative = false
mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 64, 32 )
cell_y_sort = true
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="3" type="TileMap" parent="Map"]
position = Vector2( 0, -69 )
z_index = 3
z_as_relative = false
mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 64, 32 )
cell_y_sort = true
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="2" type="TileMap" parent="Map"]
position = Vector2( 0, -52 )
z_index = 2
z_as_relative = false
mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 64, 32 )
cell_y_sort = true
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="1" type="TileMap" parent="Map"]
position = Vector2( 0, -35 )
z_index = 1
z_as_relative = false
mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 64, 32 )
cell_y_sort = true
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="0" type="TileMap" parent="Map"]
z_as_relative = false
mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 64, 32 )
cell_y_sort = true
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Interactive HUD" parent="." instance=ExtResource( 2 )]
visible = false
gpname = "Level"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4

[node name="HUD" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="HUD"]
margin_right = 640.0
margin_bottom = 360.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 8 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/VBoxContainer"]
margin_right = 640.0
margin_bottom = 90.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rotate_Left" type="Button" parent="HUD/VBoxContainer/HBoxContainer"]
margin_right = 106.0
margin_bottom = 90.0
size_flags_horizontal = 3
text = "Rotate Left"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="HUD/VBoxContainer/HBoxContainer"]
margin_left = 106.0
margin_right = 213.0
margin_bottom = 90.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/VBoxContainer/HBoxContainer"]
margin_left = 213.0
margin_right = 319.0
margin_bottom = 90.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="HSlider" type="HSlider" parent="HUD/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 106.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
max_value = 250.0
step = 5.0
value = 245.0
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="HUD/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 106.0
margin_bottom = 50.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
bbcode_enabled = true
bbcode_text = "[center]Speed = 98[/center]"
text = "Speed = 98"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 106.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Slow_Pathfind" type="Button" parent="HUD/VBoxContainer/HBoxContainer"]
margin_left = 319.0
margin_right = 426.0
margin_bottom = 90.0
size_flags_horizontal = 3
text = "Slow Pathfind"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer3" type="VBoxContainer" parent="HUD/VBoxContainer/HBoxContainer"]
margin_left = 426.0
margin_right = 533.0
margin_bottom = 90.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="Rotate_Right" type="Button" parent="HUD/VBoxContainer/HBoxContainer"]
margin_left = 533.0
margin_right = 640.0
margin_bottom = 90.0
size_flags_horizontal = 3
text = "Rotate Right"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="HUD/VBoxContainer"]
margin_top = 90.0
margin_right = 640.0
margin_bottom = 225.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5

[node name="HBoxContainer3" type="HBoxContainer" parent="HUD/VBoxContainer"]
margin_top = 225.0
margin_right = 640.0
margin_bottom = 360.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5

[connection signal="timeout" from="Timer" to="Map" method="_on_Timer_timeout"]
[connection signal="pressed" from="HUD/VBoxContainer/HBoxContainer/Rotate_Left" to="Map" method="_on_Rotate_Left_pressed"]
[connection signal="value_changed" from="HUD/VBoxContainer/HBoxContainer/VBoxContainer/HSlider" to="Map" method="_on_HSlider_value_changed"]
[connection signal="pressed" from="HUD/VBoxContainer/HBoxContainer/Slow_Pathfind" to="Map" method="find_moverange"]
[connection signal="pressed" from="HUD/VBoxContainer/HBoxContainer/Rotate_Right" to="Map" method="_on_Rotate_Right_pressed"]
